--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: events_manager
-description: "A new Flutter project."
+description: "Revent - An app that helps you manage your events and announcements"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -45,7 +45,6 @@ dependencies:
   syncfusion_flutter_calendar: ^28.2.9
   cloud_firestore: ^5.6.5
   image_picker: ^1.1.2
-  supabase_flutter: ^2.8.4
   rxdart: ^0.28.0
   flutter_riverpod: ^2.6.1
   flutter_svg: ^2.0.17
@@ -60,6 +59,8 @@ dependencies:
   firebase_messaging: ^15.2.4
   flutter_local_notifications: ^18.0.1
   timezone: ^0.10.0
+  cloud_functions: ^5.6.2
+  http: ^1.6.0
 
 dev_dependencies:
   flutter_test:
