--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   timezone: ^0.10.0
   cloud_functions: ^5.6.2
   http: ^1.6.0
+  permission_handler: ^12.0.1
 
 dev_dependencies:
   flutter_test:
