--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,8 +56,8 @@ dependencies:
   flutter_cache_manager: ^3.4.1
   cached_network_image: ^3.4.1
   firebase_storage: ^12.4.4
-  firebase_messaging: ^15.2.4
-  flutter_local_notifications: ^18.0.1
+  # firebase_messaging: ^15.2.4
+  # flutter_local_notifications: ^18.0.1
   timezone: ^0.10.0
   cloud_functions: ^5.6.2
   http: ^1.6.0
