--- a/functions-ts/package.json
+++ b/functions-ts/package.json
@@ -18,6 +18,7 @@
     "express": "^4.21.2",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1",
+    "google-auth-library": "^10.5.0",
     "nodemailer": "^7.0.11",
     "uuid": "^11.0.5"
   },
