--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   google_fonts: ^6.2.1
   syncfusion_flutter_calendar: ^28.2.9
+  syncfusion_flutter_pdfviewer: ^28.2.12
   cloud_firestore: ^5.6.5
   image_picker: ^1.1.2
   rxdart: ^0.28.0
@@ -50,6 +51,7 @@ dependencies:
   flutter_svg: ^2.0.17
   flutter_markdown: ^0.7.6+2
   url_launcher: ^6.3.1
+  webview_flutter: ^4.13.0
   markdown: ^7.3.0
   flutter_map: ^8.1.1
   latlong2: ^0.9.1
